# pyclaw

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: main.yml
pyclaw/: __init__.py  __main__.py
pyclaw/agents/: __init__.py  agent.py  client.py  command_handler.py  context.py  conversation.py  orchestrator.py  runtime.py  simple_agent.py  stream_handler.py  tool_adapter.py
pyclaw/agents/commands/: __init__.py  command_handler.py
pyclaw/agents/core/: __init__.py  conversation.py  instruction.py  orchestrator.py
pyclaw/agents/sessions/: __init__.py  session_manager.py
pyclaw/agents/streaming/: __init__.py  stream_handler.py
pyclaw/agents/tools/: __init__.py  parser.py  registry.py
pyclaw/channels/: __init__.py  base.py  web.py
pyclaw/config/: __init__.py  loader.py  schema.py
pyclaw/gateway/: __init__.py  channels.py  runtime.py  server.py
pyclaw/gateway/handlers/: __init__.py  agent.py  chat.py  sessions.py  system.py
pyclaw/gateway/static/: chat.html
pyclaw/tools/: __init__.py  base.py  builtin.py  registry.py
pyclaw/tools/builtin/: __init__.py  bash.py  datetime.py  echo.py  exec.py  file.py  list_dir.py  python.py  weather.py
tests/: test_agents.py  test_config.py  test_core.py  test_gateway.py  test_tools.py
