[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyclaw"
dynamic = ["version"]
description = "Personal AI Assistant"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ['Artificial Intelligence']
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "json5>=0.9.14",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
    "rich>=13.7.0",
    "chatchat>=0.3.2",
]

[project.urls]
Homepage = "https://github.com/jiauzhang/pyclaw"

[tool.hatch.version]
path = "pyclaw/version.py"

[tool.hatch.build.targets.wheel]
packages = ["pyclaw"]
