[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pyclaw"
dynamic = ["version"]
description = "Personal AI Assistant"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ['Artificial Intelligence']
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "chatchat>=0.3.2",
]

[project.scripts]
pyclaw = "pyclaw.__main__:cli"

[project.urls]
Homepage = "https://github.com/jiauzhang/pyclaw"

[tool.hatch.version]
path = "pyclaw/version.py"

[tool.hatch.build.targets.wheel]
packages = ["pyclaw"]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]